--- a/backend/package.json
+++ b/backend/package.json
@@ -16,20 +16,20 @@
     "fs": "^0.0.1-security",
     "knex": "<0.20.0",
     "path": "^0.12.7",
-    "pg": "7.4.3",
+    "pg": "^8.0.3",
     "rimraf": "^3.0.1",
     "sqlite3": "latest",
-    "strapi": "3.0.0-beta.20",
-    "strapi-admin": "3.0.0-beta.20",
-    "strapi-connector-bookshelf": "3.0.0-beta.20",
-    "strapi-plugin-content-manager": "3.0.0-beta.20",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.20",
-    "strapi-plugin-email": "3.0.0-beta.20",
-    "strapi-plugin-graphql": "3.0.0-beta.20",
-    "strapi-plugin-upload": "3.0.0-beta.20",
-    "strapi-plugin-users-permissions": "3.0.0-beta.20",
-    "strapi-provider-upload-cloudinary": "3.0.0-beta.20",
-    "strapi-utils": "3.0.0-beta.20",
+    "strapi": "3.0.0",
+    "strapi-admin": "3.0.0",
+    "strapi-connector-bookshelf": "3.0.0",
+    "strapi-plugin-content-manager": "3.0.0",
+    "strapi-plugin-content-type-builder": "3.0.0",
+    "strapi-plugin-email": "3.0.0",
+    "strapi-plugin-graphql": "3.0.0",
+    "strapi-plugin-upload": "3.0.0",
+    "strapi-plugin-users-permissions": "3.0.0",
+    "strapi-provider-upload-cloudinary": "3.0.0",
+    "strapi-utils": "3.0.0",
     "unzip-stream": "^0.3.0"
   },
   "author": {
